--- a/Passion Project copy/archive-style.css
+++ b/Passion Project copy/archive-style.css
@@ -62,6 +62,7 @@ h1 {
     width: 16vw;
     height: 20vw;
     cursor: url("archive-cursor-hover.png"),auto;
+    border: 1px solid white;
 }
 
 .flexbox-container {
@@ -109,5 +110,43 @@ h1 {
   max-height: 95%;
 }
 
-    
+.overlay {
+    position:relative;
+}
 
+.title {
+    position:absolute;
+    margin:0;
+    padding:0;
+    border:0;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    opacity:0;
+    visibility:hidden;
+    text-decoration: none;
+    font-family: 'Aldrich';
+    font-size: 20px;
+    text-align: center;
+    display:inline-block;
+    background-color:white;
+    width:16vw;
+    height:20vw;
+    align-items:center;
+    justify-content:center;
+    border: solid 1px white; 
+
+    
+}
+
+.overlay:hover .title {
+    visibility: visible;
+    opacity: 50%;
+    display:flex;
+    /* flex-direction:column; */
+    justify-content:center;
+    align-items: center;
+    transition:ease 1s;
+    cursor: url(archive-cursor-hover.png), auto;
+}
